# adequation_data_pipeline

dvf_perf_test/: readme.md
dvf_perf_test/laravel_test_dvf/: .env.example
dvf_perf_test/laravel_test_dvf/app/Http/Controllers/: DvfController.php
dvf_perf_test/laravel_test_dvf/app/Models/: Dvf.php
dvf_perf_test/laravel_test_dvf/database/migrations/: 2025_10_06_163638_create_dvfs_table.php
dvf_perf_test/laravel_test_dvf/routes/: web.php
laravel_data_pipeline/: .gitignore  docker-compose.yml  readme.md
laravel_data_pipeline/etlctl/: Cargo.toml  test.json
laravel_data_pipeline/etlctl/src/: duck.rs  etl.rs  expr.rs  lib.rs  main.rs  sink.rs  types.rs  util.rs
laravel_data_pipeline/infra/etlctl/: Dockerfile
laravel_data_pipeline/infra/metabase/: Dockerfile
laravel_data_pipeline/web/: composer.json  package-lock.json  package.json  vite.config.ts
laravel_data_pipeline/web/app/Http/Controllers/: GoldDatasetController.php  MappingController.php  PipelineController.php  ProjectController.php  RunController.php  SilverController.php  SourceController.php
laravel_data_pipeline/web/app/Http/Controllers/Auth/: AuthenticatedSessionController.php
laravel_data_pipeline/web/app/Http/Middleware/: HandleInertiaRequests.php
laravel_data_pipeline/web/app/Http/Requests/: StorePipelineRunRequest.php  StoreRunErrorSampleRequest.php  UpdatePipelineRunRequest.php  UpdateRunErrorSampleRequest.php
laravel_data_pipeline/web/app/Models/: Dataset.php  Mapping.php  Pipeline.php  PipelineRun.php  Project.php  RunErrorSample.php  Source.php  User.php
laravel_data_pipeline/web/app/Services/: Warehouse.php  WorkerClient.php
laravel_data_pipeline/web/config/: services.php
laravel_data_pipeline/web/database/migrations/: 2025_10_03_233716_create_projects_table.php  2025_10_03_233735_create_sources_table.php  2025_10_03_233736_create_datasets_table.php  2025_10_03_233747_create_mappings_table.php  2025_10_03_233749_create_pipelines_table.php  2025_10_03_233807_create_pipeline_runs_table.php  2025_10_03_233808_create_run_error_samples_table.php
laravel_data_pipeline/web/database/seeders/: DatabaseSeeder.php
laravel_data_pipeline/web/resources/js/components/: AppSidebar.vue
laravel_data_pipeline/web/resources/js/components/pipeline/: MappingBuilderXL.vue  SilverSchemaEditor.vue
laravel_data_pipeline/web/resources/js/layouts/: AppLayout.vue
laravel_data_pipeline/web/resources/js/pages/: Dashboard.vue
laravel_data_pipeline/web/resources/js/pages/Projects/: Index.vue  Show.vue
laravel_data_pipeline/web/resources/js/types/: pipeline.d.ts
laravel_data_pipeline/web/resources/views/: app.blade.php
laravel_data_pipeline/web/routes/: web.php
rust_local_pipeline/: .gitignore  Cargo.toml  Dockerfile  readme.md  run.sh
rust_local_pipeline/crates/cli/: Cargo.toml
rust_local_pipeline/crates/cli/src/: main.rs
rust_local_pipeline/crates/curate/: Cargo.toml
rust_local_pipeline/crates/curate/src/: lib.rs
rust_local_pipeline/crates/duckdb-catalog/: Cargo.toml
rust_local_pipeline/crates/duckdb-catalog/src/: lib.rs
rust_local_pipeline/crates/ingest/: Cargo.toml
rust_local_pipeline/crates/ingest/src/: lib.rs
rust_local_pipeline/crates/metadata/: Cargo.toml
rust_local_pipeline/crates/metadata/src/: lib.rs
rust_local_pipeline/crates/validate/: Cargo.toml
rust_local_pipeline/crates/validate/src/: lib.rs
