[workspace]
members = ["crates/ingest", "crates/validate", "crates/curate", "crates/serve", "crates/cli", "crates/metadata", "crates/duckdb-catalog"]
resolver = "3"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.79"

[workspace.dependencies]
anyhow = "1.0.100"
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
datafusion = "50.0.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.44", features = ["macros", "formatting", "parsing"] }
uuid = { version = "1.4.3", features = ["v4"] }
blake3 = "1.8.2"
object_store = "0.12.4"
bytes = "1.10.1"
parquet = "56.2.0"
tower-http = "0.6.6"
arrow = { version = "56.2.0", features = ["default"] }
axum = "0.8.6"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
csv-async = { version = "1.3.1", features = ["tokio"] }
geohash = "0.13.1"
duckdb = {version = "1.4.0"}


[workspace.lints.rust]
unused_imports = "warn"
dead_code = "warn"



[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
