[package]
name = "etlctl"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = "0.8.6"
http = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1" ,features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing = "0.1.41"
anyhow = "1.0.100"
#uuid={ version = "1.4.3", features = ["v4"] }
chrono = {version = "0.4.42", features = ["clock"]}
#rand = "0.9.2"
#glob = "0.3.3"
percent-encoding = "2.3.2"
polars = { version="0.51.0", features=["lazy","csv","parquet","temporal","strings","string_pad", "concat_str", "semi_anti_join"] }
#iceberg = { version="0.6.0", features=["storage-fs"] }
serde_json = {version = "1.0.145"}



[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"