[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
ingest = { path = "../ingest" }
validate = { path = "../validate" }
curate = { path = "../curate" }
duckdb-catalog = { path="../duckdb-catalog" }
metadata = { path = "../metadata" }
clap = {version = "4.5.48", features = ["derive"]}
humantime = "2.3.0"