[package]
name = "validate"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
blake3 = { workspace = true }
arrow = { workspace = true }
geohash = {workspace = true}